--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Jwan
 description: Meet Jwan, a junior cybersecurity who outsmarts malware while you’re still figuring out your router!
 #show_downloads: false
 #google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
