--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Jwan
 #logo: /assets/img/logo.png
 description: Meet Jwan, a junior cybersecurity who outsmarts malware while you’re still figuring out your router!
 #show_downloads: false
-#google_analytics:
+google_analytics: G-NT233V52TM
 theme: jekyll-theme-cayman
